--- a/src/app/pages/apartments/apartments.scss
+++ b/src/app/pages/apartments/apartments.scss
@@ -4,7 +4,7 @@
   overflow-x: hidden;
 
   .hero-section {
-    height: 100vh;
+    height: 100svh;
     position: relative;
     display: flex;
     justify-content: center;
@@ -95,7 +95,7 @@
 
   .details-section {
     position: relative;
-    height: 100vh;
+    height: 100svh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -143,7 +143,7 @@
   }
 
   .villas-section {
-    height: 100vh;
+    height: 100svh;
     position: relative;
     display: flex;
     align-items: center;
@@ -209,7 +209,7 @@
 
   .interior-section {
     position: relative;
-    height: 100vh;
+    height: 100svh;
     overflow: hidden;
     background-color: var(--drina-beige);
 
@@ -307,7 +307,7 @@
 
   .hottub-section {
     position: relative;
-    height: 100vh;
+    height: 100svh;
     overflow: hidden;
     background-color: var(--drina-beige);
     display: flex;
