--- a/src/app/pages/booking/booking.component.scss
+++ b/src/app/pages/booking/booking.component.scss
@@ -1,6 +1,6 @@
 .booking-flow-container {
   width: 100%;
-  height: 100vh;
+  height: 100svh;
   background: url('/images/ocean-panoramic-view-from-water-with-visible-border-water-sky-generative-ai.jpg') no-repeat center top / cover;
   position: relative;
   display: flex;
