--- a/src/app/pages/wellness/wellness.scss
+++ b/src/app/pages/wellness/wellness.scss
@@ -4,7 +4,7 @@
   overflow-x: hidden;
 
   .hero-section {
-    height: 100vh;
+    height: 100svh;
     position: relative;
     display: flex;
     justify-content: center;
@@ -99,7 +99,7 @@
 
   .spa-details-section {
     position: relative;
-    height: 100vh;
+    height: 100svh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -156,7 +156,7 @@
   }
 
   .treatments-section {
-    height: 100vh;
+    height: 100svh;
     position: relative;
     display: flex;
     align-items: center;
@@ -219,7 +219,7 @@
 
   .ice-room-section {
     position: relative;
-    height: 100vh;
+    height: 100svh;
     background: #fdf6f0;
     overflow: hidden;
     display: flex;
@@ -293,7 +293,7 @@
 
   .pool-section {
     position: relative;
-    height: 100vh;
+    height: 100svh;
     display: flex;
     align-items: center;
     justify-content: center;
